More problems solved with the z-index prop..

--- a/app/[locale]/(platform)/_components/Projects/ProjectsCard/ProjectsCardComponent.scss
+++ b/app/[locale]/(platform)/_components/Projects/ProjectsCard/ProjectsCardComponent.scss
@@ -38,7 +38,7 @@
       backdrop-filter: blur(3px);
       border-radius: 15px 15px 0 0;
       top: 0;
-
+      z-index: 4;
       height: 15%;
       width: 100%;
 
